--- a/changelog.txt
+++ b/changelog.txt
@@ -4,8 +4,100 @@ Author		: Icegram
 Author URI	: https://www.icegram.com/
 License		: GPLv3
 
+*******************************************************Version3.5.18******************************************************
 
-***********************************************************Version 3.5.1************************************************************
+* Fix: Double Opt in subscription link is not working with email having "+" sign
+
+*******************************************************Version 3.5.17******************************************************
+
+* Update: Now, email subscription limit also check for non admin users.
+
+*******************************************************Version 3.5.16******************************************************
+
+* Fix: spam subscription issue.
+* Fix: Visitors were not able to subscribe.
+
+*******************************************************Version 3.5.15******************************************************
+
+* Fix: Extra field shown for forms on RTL sites
+
+*******************************************************Version 3.5.14******************************************************
+
+* Fix: Improve prevention of spam signups
+
+*******************************************************Version 3.5.13******************************************************
+
+* Fix: “Oops, an unexpected error occurred” while subscribing 
+* Update: Added shortcode support in email templates [learn more](https://www.icegram.com/documentation/why-some-shortcodes-are-not-working-in-email-templates)
+
+*******************************************************Version 3.5.12******************************************************
+
+* Fix: Invalid unsubscribe link
+* Update: Use string instead of constant for Text Domain.
+
+*******************************************************Version 3.5.11******************************************************
+
+* Fix: Send test newsletter to "Test" group on update
+
+*******************************************************Version 3.5.10******************************************************
+
+* Fix: Prevent spam signups
+
+*******************************************************Version 3.5.9******************************************************
+
+* Fix: Opt-In Confirmation and Unsubscribe link not working after server migration.
+
+*******************************************************Version 3.5.8******************************************************
+
+* Update: Added "Test Email" functionality to confirm email deliverability.
+
+*******************************************************Version 3.5.7******************************************************
+
+* Fix: Post notification sent to multiple times.
+* Update: POT file
+* Localization: Made all translation files up-to-date with latest POT file
+
+************************************************************Version 3.5.6************************************************************
+
+* Update: POT file
+* Localization: Made all translation files up-to-date with latest POT file
+
+************************************************************Version 3.5.5************************************************************
+
+* Enhancment : Improved onboarding 
+* Fix: "Notice: get_currentuserinfo is deprecated"
+* Fix: Import CSV not working if list contains only one record
+
+************************************************************Version 3.5.4************************************************************
+
+* New: Added option to disable cron email sent to Admin
+* Fix: 'Optimize Table & Delete Records' button not deleting any reports
+* Fix: 'In Queue' notice showing multiple times on Reports tab
+* Update: Sent Report email will be now sent only if sending email immediately
+* Update: POT file
+* Localization: Made all translation files up-to-date with latest POT file
+
+************************************************************Version 3.5.3************************************************************
+
+* Fix: Notices on Subscribers -> Sync page (Illegal string offset ‘es_registered’ & ‘es_registered_group’)
+* Update: Use of $wpdb->prepare for direct queries to the database
+* Update: Text improvements while creating/editing post notification
+* Update: POT file
+* Localization: Translation for Swedish (sv_SE) language updated (Thanks to Rune Svennelid)
+* Localization: Made all translation files up-to-date with latest POT file
+
+************************************************************Version 3.5.2************************************************************
+
+* Update: Show list of available keywords based on template type while editing a template
+* Update: Increased 'maxlength' for name and email field in the subscription form
+* Update: Single subscription form for widget, shortcode and php code
+* Update: Added text domain for missing texts
+* Update: POT file
+* Localization: Translation for Polish (pl_PL) language updated (Thanks to Witold)
+* Localization: Translation for German Deutsch (de_DE) language updated (Thanks to Zero & Markus Buschmann)
+* Localization: Made all translation files up-to-date with latest POT file
+
+************************************************************Version 3.5.1************************************************************
 
 * Update: Privacy Policy page link on Help & Info page
 * Update: POT file
@@ -13,7 +105,7 @@ License		: GPLv3
 * Localization: Translation for Lithuanian (lt_LT) language removed
 * Tweak: Notice for admin on Reports page if Cron job is 'In Queue'
 
-***********************************************************Version 3.5.0************************************************************
+************************************************************Version 3.5.0************************************************************
 
 * New: [GDPR] Provision for consent checkbox in the subscription form [Steps to enable it](https://www.icegram.com/documentation/es-gdpr-how-to-enable-consent-checkbox-in-the-subscription-form/)
 * New: Keyword {{POSTEXCERPT}} for showing Post Excerpt in Post Notification emails
@@ -28,7 +120,7 @@ License		: GPLv3
 * Localization: Made all translation files up-to-date with latest POT file
 * Localization: Translation for Czech (cs_CZ) language removed
 
-***********************************************************Version 3.4.12************************************************************
+************************************************************Version 3.4.12************************************************************
 
 * Fix: Some users getting 'Invalid email address' for valid email address during form submission
 * Fix: Empty email field not showing validation errors during form submission
@@ -38,7 +130,7 @@ License		: GPLv3
 * Localization: Translation for German Deutsch (de_DE) language updated (Thanks to Markus Buschmann)
 * Localization: Made all translation files up-to-date with latest POT file
 
-***********************************************************Version 3.4.11************************************************************
+************************************************************Version 3.4.11************************************************************
 
 * Fix: Special characters in the post title showing as html entities when using {{POSTTITLE}} keyword [due to `get_the_title($post)`]
 * Fix: 'Oops.. Unexpected error occurred 0.' in Email Subscribers - Group Selector form when subscriber status is unconfirmed or unsubscribed
@@ -102,7 +194,7 @@ License		: GPLv3
 
 ************************************************************Version 3.4.4************************************************************
 
-* New: Introducing [Email Subscribers Pro](https://www.icegram.com/email-subscribers-pricing/) 
+* New: Introducing [Email Subscribers Pro](https://www.icegram.com/email-subscribers-pricing/) plan
 * Update: Change in logic for showing subscribers in subscribers dashboard
 
 ************************************************************Version 3.4.3************************************************************
@@ -125,7 +217,7 @@ License		: GPLv3
 
 ************************************************************Version 3.4.1************************************************************
 
-* Fix: Fatal error: Can’t use function return value in write context
+* Fix: Fatal error: Can’t use function return
 
 ************************************************************Version 3.4.0************************************************************
 
